{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 224,
  "lineage": "3ae93b3b-23b0-e5fa-c182-b26de552d8f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:security-group/sg-043a8385f6e9aab30",
            "description": "Allow HTTP and HTTPS from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043a8385f6e9aab30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portfolio-alb-sg",
            "name_prefix": "",
            "owner_id": "183631331023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-alb-sg"
            },
            "tags_all": {
              "Name": "portfolio-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_bastion_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:security-group/sg-089f7852913f62823",
            "description": "Allow SSH from MyIP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089f7852913f62823",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.9.17.33/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "portfolio-bastion-ec2-sg",
            "name_prefix": "",
            "owner_id": "183631331023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-bastion-ec2-sg"
            },
            "tags_all": {
              "Name": "portfolio-bastion-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:security-group/sg-04658244ea5c6d0e7",
            "description": "Allow HTTP from ALB only and SSH from MyIP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04658244ea5c6d0e7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043a8385f6e9aab30"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "183631331023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-ec2-sg"
            },
            "tags_all": {
              "Name": "portfolio-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.portfolio_alb_sg",
            "aws_vpc.portfolio_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:security-group/sg-0e90f1a85f7c69226",
            "description": "Allow MySQL access from EC2 SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e90f1a85f7c69226",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from Bistion EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089f7852913f62823"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04658244ea5c6d0e7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "portfolio-rds-sg",
            "name_prefix": "",
            "owner_id": "183631331023",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-rds-sg"
            },
            "tags_all": {
              "Name": "portfolio-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.portfolio_alb_sg",
            "aws_security_group.portfolio_bastion_ec2_sg",
            "aws_security_group.portfolio_ec2_sg",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_private_subnet_1a_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:subnet/subnet-0438a2788a59af7d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0438a2788a59af7d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631331023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-private-subnet-1a-db"
            },
            "tags_all": {
              "Name": "portfolio-private-subnet-1a-db"
            },
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_private_subnet_1c_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:subnet/subnet-08091c5ec4020dcf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08091c5ec4020dcf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631331023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-private-subnet-1c-db"
            },
            "tags_all": {
              "Name": "portfolio-private-subnet-1c-db"
            },
            "vpc_id": "vpc-0aad465c89b36c764"
          },
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "portfolio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:183631331023:vpc/vpc-0aad465c89b36c764",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099894646de0e4880",
            "default_route_table_id": "rtb-0ca47eaaa6e571076",
            "default_security_group_id": "sg-0a7612db6e6b39fe2",
            "dhcp_options_id": "dopt-04905366e703e7f1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aad465c89b36c764",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca47eaaa6e571076",
            "owner_id": "183631331023",
            "tags": {
              "Name": "portfolio-vpc"
            },
            "tags_all": {
              "Name": "portfolio-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}